[tool.poetry]
name = "kobo2Calibre"
version = "0.1"
description = ""
authors = ["degiz"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["var-annotated"]

[tool.poetry.dependencies]
python = ">=3.8"
mypy = "^0.910"
black = "19.10b0"
flake8 = "^3.8.3"
flake8-docstrings = "1.5.0"
beautifulsoup4 = "4.9.3"
spacy = "3.1.0"
transliterate = "1.10.2"
