[tool.poetry]
name = "kobo2Calibre"
version = "0.1"
description = ""
authors = ["degiz"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = ["var-annotated"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mypy = "0.910"
black = "^22.12.0"
beautifulsoup4 = "^4.11.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
PyQt6 = "^6.4.0"
